--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "testesimbiose",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && node ./dist/index.js",
-    "dev": "tsnd ./src/index.ts",
+    "test": "mocha -r ts-node/register ./src/tests/*$NAME*.{test,spec}.ts -t 10000 --exit",
+    "start": "tsnd ./src/index.ts",
+    "dev": "npm run build && tsnd ./src/index.ts",
     "build": "tsc",
     "db:reset": "npx -y tsc && npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize db:migrate && npx sequelize db:seed:all"
   },
@@ -21,15 +21,25 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "joi": "^17.7.0",
+    "mocha": "^10.1.0",
     "restify-errors": "^8.0.2",
     "sequelize": "^6.25.5"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/chai-http": "^4.2.0",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.2",
+    "@types/mocha": "^10.0.0",
     "@types/node": "^18.11.9",
     "@types/sequelize": "^4.28.14",
+    "@types/sinon": "^10.0.13",
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.2",
+    "sinon": "^14.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
