Finaliza testes unitarios da aplicação backend

--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/chai-http": "^4.2.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.2",
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.11.9",
     "@types/sequelize": "^4.28.14",
     "@types/sinon": "^10.0.13",
+    "assert": "^2.0.0",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.2",
